--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
   </div>
 
   <!-- В этот список рендери разметку меню -->
-  <ul class="menu js-menu"></ul>
+  <ul class="menu js-menu">
+  </ul>
+  <script src="./index.js"></script>
 </body>
 
 </html>
